tests/baselines/reference/functionWithNoBestCommonType1.errors.txt
tests/cases/compiler/functionWithNoBestCommonType1.ts(1,10): error TS2354: No best common type exists among return expressions.
tests/cases/compiler/functionWithNoBestCommonType1.ts(3,5): error TS7027: Unreachable code detected.


==== tests/cases/compiler/functionWithNoBestCommonType1.ts (2 errors) ====
    function foo() {
             ~~~
!!! error TS2354: No best common type exists among return expressions.
        return true;
        return bar();
        ~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    function bar(): void {
    }